--- a/Question2/style.css
+++ b/Question2/style.css
@@ -1,6 +1,8 @@
 .image2{
-    height: 200px;
+    width: 200px;
     border-radius: 100px;
+    margin-left: 20px;
+    margin-top: 10px;
 }
 .lab{
     color: rgb(98, 33, 8);
@@ -8,13 +10,17 @@
 .home{
     color: blue;
 }
+.profile{
+   
+    background-image: url("image2/CSVSJS.png");
+}
 
 p{
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .validator{
-    display: inline-block;
-    align-items: end;
+    
     margin-left: 600px;
     margin-bottom: 20px;
 }
